# Axis

./: Project.toml  README.md
Axis/: Project.toml
Axis/src/: Axis.jl  codegen.jl  ffi.jl  types.jl
Axis/src/math/: vector.jl
Axis/src/ocean/: phillips_ocean.jl
axis_rs/: .gitignore  Cargo.toml
axis_rs/src/: ffi.rs  lib.rs  main.rs  wgpu_core.rs
axis_rs/src/ocean/: mod.rs  phillips_ocean.rs  phillips_ocean_wgpu.rs
scripts/: clean_bridge.jl  generate_mandelbrot_bridge.jl  mandelbrot_wgpu_zoom.jl  test_axis_phillips_ocean.jl  test_core_dispatcher.jl
