[package]
name = "axis_rs"
version = "0.1.0"
edition = "2024"

[lib]
# tells Rust to build a .dll / .so / .dylib
crate-type = ["cdylib", "rlib"]

[[bin]]
# use below to avoid `axis_rs` name conflict when running `cargo build --release`
name = "axis_rs_cli"
path = "src/main.rs"

[dependencies]
libc = "0.2.186"
wgpu = "29.0.3"
tokio = { version = "1.51.1", features = ["full"] }
